--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,14 @@
 *.psd
 *.html
 
+/sites/all/themes/zen_wiche/.sass-cache
+.sass-cache
+
 
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
 files/
 sites/all/themes/zen_PsychIntern/images/
+sites/all/themes/zen_PsychIntern/fonts/
+
