set tls-acme to true in .lagoon.yml

--- a/.lagoon.yml
+++ b/.lagoon.yml
@@ -25,8 +25,8 @@ environments:
     routes:
       - varnish:
         - "www.ut-pic.org":
-            tls-acme: 'false'
+            tls-acme: 'true'
             insecure: Redirect
         - "ut-pic.org":
-            tls-acme: 'false'
+            tls-acme: 'true'
             insecure: Redirect
